# CUDA_test_for_server

./: CMakeLists.txt  README.md
1_cuda_reduce_study/: CMakeLists.txt  my_reduce_v0_global_memory.cu  my_reduce_v1_shared_memory.cu  my_reduce_v2_no_divergence_branch.cu  my_reduce_v3_no_bank_conflict.cu  my_reduce_v4_add_during_load_plan_a.cu  my_reduce_v4_add_during_load_plan_b.cu  my_reduce_v5_unroll_last_warp.cu  my_reduce_v6_completely_unroll.cu  my_reduce_v7_multi_add.cu  my_reduce_v8_shuffle.cu
2_cuda_sgemm_study/: CMakeLists.txt  my_sgemm_v0_global_memory.cu  my_sgemm_v1_shared_memory.cu  my_sgemm_v2_shared_memory_sliding_windows.cu  my_sgemm_v3_increase_work_of_per_thread.cu  my_sgemm_v4_float4.cu  my_sgemm_v5_register_outer_product.cu  my_sgemm_v6_register_outer_product_float4.cu  shared.cu
3_kernal_profiling_guide/: CMakeLists.txt  combined_access.cu  my_transpose_v1_naive.cu
4_test_sparse/: CMakeLists.txt  test.cu
